force-app/main/default/objects/Policy_Line_Item__c/Policy_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Policy Line Item</label>
    <nameField>
        <label>Polic Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Police Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>