force-app/main/default/objects/Policy_Line_Item__c/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <formula>IF( TEXT(Country__c)= &apos;India&apos; &amp;&amp;  Policy__r.Amountt__c  &gt; 0,&quot;INR&quot;, IF( TEXT( Country__c ) = &apos;United Kingdom&apos; &amp;&amp;  Policy__r.Amountt__c  &gt; 0,&quot;£&quot;, IF(TEXT( Country__c ) = &apos;United States&apos; &amp;&amp;  Policy__r.Amountt__c  &gt; 0,&quot;$&quot;,  IF(TEXT(Country__c ) = &apos;Australia&apos; &amp;&amp; Policy__r.Amountt__c  &gt; 0,&quot;A$‎&quot;,NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Type</label>
    <type>Text</type>
</CustomField>