force-app/main/default/objects/Policy_Line_Item__c/fields/Is_Important__c.field-meta.xml
<CustomField>
    <fullName>Is_Important__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Important?</label>
    <type>Checkbox</type>
</CustomField>