force-app/main/default/objects/Policy_Line_Item__c/fields/Is_Policy_Customer_Is_Activated__c.field-meta.xml
<CustomField>
    <fullName>Is_Policy_Customer_Is_Activated__c</fullName>
    <formula>Text(Policy__r.Account__r.CustomerPriority__c)  =&apos;High&apos; &amp;&amp;  Is_Important__c  &amp;&amp; Text( Status__c ) = &apos;Open&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Policy Customer Is Activated ?</label>
    <type>Checkbox</type>
</CustomField>