force-app/main/default/objects/Policy_Line_Item__c/fields/nen__c.field-meta.xml
<CustomField>
    <fullName>nen__c</fullName>
    <label>nen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>