force-app/main/default/objects/Policy_Line_Item__c/fields/Policy_Line_Item_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Line_Item_Created_Date__c</fullName>
    <label>Policy Line Item Created Date</label>
    <type>Date</type>
</CustomField>