force-app/main/default/objects/Policy_Line_Item__c/fields/Policy_Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Line_Item_Name__c</fullName>
    <label>Policy Line Item Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>