force-app/main/default/objects/Policy_Line_Item__c/fields/Policy_Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Line_Item_Number__c</fullName>
    <displayFormat>PL-{0000}</displayFormat>
    <label>Policy Line Item Number</label>
    <type>AutoNumber</type>
</CustomField>