force-app/main/default/objects/Policy_Line_Item__c/fields/Policy_Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Line_Item_Type__c</fullName>
    <label>Policy Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Damages</fullName>
            </value>
            <value>
                <fullName>Hospitalised</fullName>
            </value>
            <value>
                <fullName>Fire Accedent</fullName>
            </value>
            <value>
                <fullName>Vehicle Damage</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>