force-app/main/default/objects/Policy_Line_Item__c/validationRules/Anual_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Anual_Amount</fullName>
    <active>false</active>
    <errorConditionFormula>Policy__r.Account__r.AnnualRevenue  &lt; 1000</errorConditionFormula>
    <errorMessage>Enter annual revenue value more than 1000</errorMessage>
</ValidationRule>