force-app/main/default/objects/Policy_Line_Item__c/validationRules/Policy_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_Period</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISNEW(), Policy__r.Policy_Period__c  = 10 ,  Policy__r.Policy_End_Date_And_Time__c   &gt; ( NOW()) )</errorConditionFormula>
    <errorMessage>Show error message</errorMessage>
</ValidationRule>